--- a/elemnts.html
+++ b/elemnts.html
@@ -4,9 +4,9 @@
   <title>My Webpage</title>
 </head>
 <body>
-    <a>
-        <abbr>
-        <acronym>
+    <a>   <!--link-->
+        <abbr>     <!--abrivation-->
+        <acronym>    <!--the same to abrivation in functionaities-->
         <address>
         <applet>
         <area>
