--- a/index.html
+++ b/index.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
 <html>
+
+ <!--html head element that contain meta information -->
   <head>
     <meta charset="utf-8">
     <title>My Webpage</title>
   </head>
   <body>
-    <h1>Welcome to my Webpage!</h1>
+     <!--Html Body  -->
+
+     <!-- paragrap-->
     <p>This is my first webpage.</p>
+     <!-- html headings -->
+    <h1>Welcome to my Webpage!</h1>
+      <h2>
+      <h3>
+      <h4>
+      <h5>
+      <h6>
+        <!-- -->
   </body>
 </html>
