more on heading tages

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <p>This is my first webpage.</p>
      <!-- html headings -->
     <h1>Welcome to my Webpage!</h1>
-      <h2>
-      <h3>
-      <h4>
-      <h5>
-      <h6>
+      <h2>Html wesite</h2>
+      <h3>Html wesite</h3>
+      <h4>Html wesite</h4>
+      <h5>Html wesite</h5>
+      <h6>Html wesite</h6>
         <!-- -->
   </body>
 </html>
